# keyword_detection

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: keyword_detection.launch
scripts/: keyword_detection_node
src/keyword_detection_ros/: keyword_detection_node.py
